modules/gdscript/tests/scripts/analyzer/errors/static_func_call_non_static.gd
static func static_func():
	non_static_func()

func non_static_func():
	pass

func test():
	pass
